Changed CSV location in code

--- a/GMIT 52465 - Project .ipynb
+++ b/GMIT 52465 - Project .ipynb
@@ -194,7 +194,7 @@
     "# the data is monthly rainfall totals for Irish weather stations\n",
     "# since 1958 to 2015\n",
     "# I have come across this dataset previously. \n",
-    "tr = pd.read_csv('totalrainfall.csv')\n",
+    "tr = pd.read_csv('data/totalrainfall.csv')\n",
     "\n",
     "# convert the date column to datetime format to use datetime functions\n",
     "tr['date'] = pd.to_datetime(tr['date'], format='%Y-%m')\n",
